--- a/src/main/resources/runtimecfg/api-config.cfg
+++ b/src/main/resources/runtimecfg/api-config.cfg
@@ -16,19 +16,19 @@ configs.jdbc.username=apisystem
 configs.jdbc.password=199231
 
 # Druid 配置参数
-#druid.initialSize=
-#druid.maxActive=
-#druid.maxIdle=
-#druid.minIdle=
-#druid.maxWait=
-#druid.poolPreparedStatements=
-#druid.maxOpenPreparedStatements=
-#druid.validationQuery=
-#druid.testOnBorrow=
-#druid.testOnReturn=
-#druid.testWhileIdle=
-#druid.timeBetweenEvictionRunsMillis=
-#druid.numTestsPerEvictionRun=
-#druid.minEvictableIdleTimeMillis=
-#druid.exceptionSorter=
-#druid.filters=
+#configs.druid.initialSize=
+#configs.druid.maxActive=
+#configs.druid.maxIdle=
+#configs.druid.minIdle=
+#configs.druid.maxWait=
+#configs.druid.poolPreparedStatements=
+#configs.druid.maxOpenPreparedStatements=
+#configs.druid.validationQuery=
+#configs.druid.testOnBorrow=
+#configs.druid.testOnReturn=
+#configs.druid.testWhileIdle=
+#configs.druid.timeBetweenEvictionRunsMillis=
+#configs.druid.numTestsPerEvictionRun=
+#configs.druid.minEvictableIdleTimeMillis=
+#configs.druid.exceptionSorter=
+#configs.druid.filters=
