#3 - Task 2 - 配置文件修改优化.

--- a/.gitignore
+++ b/.gitignore
@@ -22,8 +22,13 @@ node_modules
 .sass-cache
 
 # Maven Project
-/target
+target/
 
 # IDEA Project Files
 *.iml
 .idea
+
+# Eclipse Project Files
+.classpath
+.project
+.settings/
