--- a/src/main/resources/runtimecfg-template/api-config.cfg
+++ b/src/main/resources/runtimecfg-template/api-config.cfg
@@ -11,9 +11,9 @@ listenPort=8001
 configs.jdbc.datasource.provider=mysql
 
 # MySQL 配置参数
-configs.jdbc.url=jdbc:mysql://localhost:3306/apisystem
-configs.jdbc.username=apisystem
-configs.jdbc.password=199231
+configs.jdbc.url=jdbc:mysql://localhost:3307/apisystem
+configs.jdbc.username=root
+configs.jdbc.password=13623652058wjcg
 
 # Druid 配置参数
 #configs.druid.initialSize=
