--- a/pom.xml
+++ b/pom.xml
@@ -10,19 +10,34 @@
     <version>1.0.0-SNAPSHOT</version>
     <name>API System</name>
 
-    <properties>
-        <!-- Basic configuration -->
-        <copy.dependencies.skip>true</copy.dependencies.skip>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.2</version>
+                <configuration>
+                    <path>/</path>
+                    <port>9999</port>
+                    <uriEncoding>utf-8</uriEncoding>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    
 
-        <!-- Dependency version configuration -->
+
+    <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <fastjson.version>1.1.41</fastjson.version>
         <junit.version>4.11</junit.version>
         <slf4j.version>1.7.5</slf4j.version>
         <log4j.version>1.2.16</log4j.version>
         <dbutils.version>1.6</dbutils.version>
         <druid.version>1.0.14</druid.version>
-        <mysql.version>5.1.26</mysql.version>
+        <mysql.version>5.1.29</mysql.version>
         <springframework.version>4.1.6.RELEASE</springframework.version>
         <jackson.version>2.6.3</jackson.version>
         <mybatis.version>3.3.0</mybatis.version>
@@ -30,7 +45,6 @@
         <common-lang3.version>3.3.2</common-lang3.version>
         <guava.version>18.0</guava.version>
         <httpclient.version>4.5.1</httpclient.version>
-        <javamail.version>1.5.0-b01</javamail.version>
     </properties>
 
     <repositories>
@@ -42,6 +56,7 @@
 
     <dependencies>
         <!-- Common Libs-->
+      
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
@@ -56,11 +71,6 @@
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
             <version>${httpclient.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>javax.mail</groupId>
-            <artifactId>mail</artifactId>
-            <version>${javamail.version}</version>
         </dependency>
 
         <!-- Test Unit  -->
@@ -208,165 +218,4 @@
             <version>2.0</version>
         </dependency>
     </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.tomcat.maven</groupId>
-                <artifactId>tomcat7-maven-plugin</artifactId>
-                <version>2.2</version>
-                <configuration>
-                    <path>/</path>
-                    <port>9999</port>
-                    <uriEncoding>${project.build.sourceEncoding}</uriEncoding>
-                </configuration>
-            </plugin>
-            <!-- Better for eclipse users, but this sucks. -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-eclipse-plugin</artifactId>
-                <version>2.8</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <failOnError>true</failOnError>
-                    <verbose>true</verbose>
-                    <fork>true</fork>
-                    <compilerArgument>-nowarn</compilerArgument>
-                    <encoding>${project.build.sourceEncoding}</encoding>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-
-    <!-- Different profile for multiply development situation -->
-    <profiles>
-        <!-- 默认的开发配置文件夹, 在没有指定别的 profile 时, 此 profile 配置生效. -->
-        <profile>
-            <id>develop</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
-            <properties>
-                <maven.test.skip>true</maven.test.skip>
-            </properties>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-resources-plugin</artifactId>
-                        <version>2.5</version>
-                        <executions>
-                            <execution>
-                                <id>copy-resources</id>
-                                <!-- execute during default lifestyle in validate goal -->
-                                <phase>validate</phase>
-                                <goals>
-                                    <goal>copy-resources</goal>
-                                </goals>
-                                <configuration>
-                                    <encoding>${project.build.sourceEncoding}</encoding>
-                                    <outputDirectory>${basedir}/src/main/resources/runtimecfg/</outputDirectory>
-                                    <resources>
-                                        <resource>
-                                            <directory>${basedir}/src/main/resources/runtimecfg-dev/</directory>
-                                            <excludes>
-                                                <exclude>README.md</exclude>
-                                            </excludes>
-                                            <filtering>true</filtering>
-                                        </resource>
-                                    </resources>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>test</id>
-            <properties>
-                <maven.test.skip>false</maven.test.skip>
-            </properties>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-resources-plugin</artifactId>
-                        <version>2.5</version>
-                        <executions>
-                            <execution>
-                                <id>copy-resources</id>
-                                <!-- execute during default lifestyle in validate goal -->
-                                <phase>validate</phase>
-                                <goals>
-                                    <goal>copy-resources</goal>
-                                </goals>
-                                <configuration>
-                                    <encoding>${project.build.sourceEncoding}</encoding>
-                                    <outputDirectory>${basedir}/src/main/resources/runtimecfg/
-                                    </outputDirectory>
-                                    <resources>
-                                        <resource>
-                                            <directory>
-                                                ${basedir}/src/main/resources/runtimecfg-qa/
-                                            </directory>
-                                            <excludes>
-                                                <exclude>README.md</exclude>
-                                            </excludes>
-                                            <filtering>true</filtering>
-                                        </resource>
-                                    </resources>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>production</id>
-            <properties>
-                <maven.test.skip>true</maven.test.skip>
-            </properties>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-resources-plugin</artifactId>
-                        <version>2.5</version>
-                        <executions>
-                            <execution>
-                                <id>copy-resources</id>
-                                <phase>validate</phase>
-                                <goals>
-                                    <goal>copy-resources</goal>
-                                </goals>
-                                <configuration>
-                                    <encoding>${project.build.sourceEncoding}</encoding>
-                                    <outputDirectory>${basedir}/src/main/resources/runtimecfg/
-                                    </outputDirectory>
-                                    <resources>
-                                        <resource>
-                                            <directory>
-                                                ${basedir}/src/main/resources/runtimecfg-product/
-                                            </directory>
-                                            <excludes>
-                                                <exclude>README.md</exclude>
-                                            </excludes>
-                                            <filtering>true</filtering>
-                                        </resource>
-                                    </resources>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
 </project>
