#6 - 将Maven私服切换到阿里云

--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
     <repositories>
         <repository>
             <id>local-central</id>
-            <url>http://maven.xiaoyou.com/nexus/content/groups/public/</url>
+            <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
         </repository>
     </repositories>
 
