--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <guava.version>18.0</guava.version>
         <httpclient.version>4.5.1</httpclient.version>
         <javamail.version>1.5.0-b01</javamail.version>
+        <mockito.version>1.10.8</mockito.version>
     </properties>
 
     <repositories>
@@ -74,6 +75,12 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
             <version>${springframework.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>${mockito.version}</version>
             <scope>test</scope>
         </dependency>
 
