--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,8 @@
         <httpclient.version>4.5.1</httpclient.version>
         <javamail.version>1.5.0-b01</javamail.version>
         <mockito.version>1.10.8</mockito.version>
+        <spring-data-redis.version>1.5.0.RELEASE</spring-data-redis.version>
+        <jedis.version>2.8.0</jedis.version>
     </properties>
 
     <repositories>
@@ -219,6 +221,18 @@
             <groupId>org.apache.velocity</groupId>
             <artifactId>velocity-tools</artifactId>
             <version>2.0</version>
+        </dependency>
+
+        <!-- Redis -->
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-redis</artifactId>
+            <version>${spring-data-redis.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>${jedis.version}</version>
         </dependency>
     </dependencies>
 
