#4 - Fix Interceptor Config

--- a/src/test/resources/runtimecfg/api-config.cfg
+++ b/src/test/resources/runtimecfg/api-config.cfg
@@ -5,7 +5,16 @@ kongAddress=http://127.0.0.1
 invokeTimeoutMillis=3000
 
 # Kong 监听端口
-listenPort=8001
+kongListenPort=8001
+
+# Redis 地址
+redisAddress=127.0.0.1
+
+# Redis 端口 (如果为默认端口可以不配置)
+#redisPort=
+
+# Redis 密码 (如果无密码, 可以不配置)
+#redisPassword=
 
 # 选择数据库
 configs.jdbc.datasource.provider=mysql
