--- a/pom.xml
+++ b/pom.xml
@@ -30,11 +30,11 @@
         <mybatis-spring.version>1.2.3</mybatis-spring.version>
         <common-lang3.version>3.3.2</common-lang3.version>
         <guava.version>18.0</guava.version>
-        <httpclient.version>4.5.1</httpclient.version>
         <javamail.version>1.5.0-b01</javamail.version>
         <mockito.version>1.10.8</mockito.version>
         <spring-data-redis.version>1.5.0.RELEASE</spring-data-redis.version>
         <jedis.version>2.8.0</jedis.version>
+        <retrofit.version>2.0.0-beta3</retrofit.version> <!-- Waiting for final release version -->
     </properties>
 
     <repositories>
@@ -57,19 +57,14 @@
             <version>${guava.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpclient</artifactId>
-            <version>${httpclient.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>fluent-hc</artifactId>
-            <version>${httpclient.version}</version>
-        </dependency>
-        <dependency>
             <groupId>javax.mail</groupId>
             <artifactId>mail</artifactId>
             <version>${javamail.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup.retrofit2</groupId>
+            <artifactId>retrofit</artifactId>
+            <version>${retrofit.version}</version>
         </dependency>
 
         <!-- Test Unit  -->
@@ -89,6 +84,13 @@
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
             <version>${mockito.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup.retrofit2</groupId>
+            <artifactId>retrofit-mock</artifactId>
+            <version>${retrofit.version}</version>
+            <optional>true</optional>
             <scope>test</scope>
         </dependency>
 
@@ -234,6 +236,13 @@
             <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
             <version>${jedis.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.6</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
