--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,29 +1,28 @@
 # Api System Config
-systemBaseUrl=http://localhost:8080
-login.exclude.uri=/user/login,/user/register,/user/register/check
+login.exclude.uri=/user/login
 
 # Kong 调用地址
-kongAddress=http://127.0.0.1
+kong.admin.address=
+
+# Kong 内部管理 API 请求端口
+kong.admin.port=8001
 
 # 调用 Kong 的超时时间 (ms)
-invokeTimeoutMillis=3000
-
-# Kong 监听端口
-kongListenPort=8001
+kong.invoke.timeout=3000
 
 # Redis 地址
-redisAddress=127.0.0.1
+redis.address=
 
 # Redis 端口
-redisPort=6379
+redis.port=
 
 # Redis 密码 (如果无密码, 可以不配置)
-redisPassword=
+redis.password=
 
 # MySQL 配置参数
-druid.jdbc.url=jdbc:mysql://localhost:3306/apisystem
-druid.jdbc.username=apisystem
-druid.jdbc.password=199231
+druid.jdbc.url=
+druid.jdbc.username=
+druid.jdbc.password=
 
 # CommonTaskPool Define
 task.corePoolSize=2
