--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,33 +1,28 @@
-systemBaseUrl=http://localhost:8080
+# Api System Config
+login.exclude.uri=/user/login
 
 # Kong 调用地址
-kongAddress=http://127.0.0.1
+kong.admin.address=http://127.0.0.1
+
+# Kong 内部管理 API 请求端口
+kong.admin.port=8001
 
 # 调用 Kong 的超时时间 (ms)
-invokeTimeoutMillis=3000
-
-# Kong 监听端口
-kongListenPort=8001
+kong.invoke.timeout=3000
 
 # Redis 地址
-redisAddress=127.0.0.1
+redis.address=127.0.0.1
 
 # Redis 端口
-redisPort=6379
+redis.port=6379
 
 # Redis 密码 (如果无密码, 可以不配置)
-redisPassword=
+redis.password=
 
 # MySQL 配置参数
 druid.jdbc.url=jdbc:mysql://localhost:3306/apisystem
 druid.jdbc.username=apisystem
 druid.jdbc.password=199231
-
-# Mail 发邮件配置
-mail.host=smtp.exmail.qq.com
-mail.port=465
-mail.username=noreply@yufan.me
-mail.password=Yufan258
 
 # CommonTaskPool Define
 task.corePoolSize=2
