--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 # Api System Config
-login.exclude.uri=/user/login
+login.exclude.uri=/admin/user/login
 
 # Kong 调用地址
 kong.admin.address=http://127.0.0.1
