--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,17 @@
 # Api System Config
 login.exclude.uri=/admin/user/login
 
-# Kong 调用地址
+# Kong 调用Host
+kong.host=
+
+kong.http.port=
+
+kong.https.port=
+
 kong.admin.address=
 
 # Kong 内部管理 API 请求端口
-kong.admin.port=8001
+kong.admin.port=
 
 # 调用 Kong 的超时时间 (ms)
 kong.invoke.timeout=3000
@@ -28,3 +34,6 @@ druid.jdbc.password=
 task.corePoolSize=2
 task.maxPoolSize=10
 task.keepAliveTime=10
+
+# Matrix Url
+matrix.url=
