--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,7 +1,13 @@
 # Api System Config
 login.exclude.uri=/user/login
 
-# Kong 调用地址
+# Kong 调用Host
+kong.host=localhost
+
+kong.http.port=8000
+
+kong.https.port=8443
+
 kong.admin.address=http://127.0.0.1
 
 # Kong 内部管理 API 请求端口
@@ -28,3 +34,6 @@ druid.jdbc.password=199231
 task.corePoolSize=2
 task.maxPoolSize=10
 task.keepAliveTime=10
+
+# Matrix Url
+matrix.url=http://101.200.161.129:8080
