GATE-7 调用用户系统登录, 并获取登录用户信息, 认证开发者 client id 有效性.

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -16,6 +16,9 @@ kong.admin.port=8001
 # 调用 Kong 的超时时间 (ms)
 kong.invoke.timeout=3000
 
+# 这个设定比较坑, 就设定 provisionKey 唯一吧
+kong.oauth2.provisionKey=a1d10a4a58d24844a68abe059f37ecf3
+
 # Redis 地址
 redis.address=127.0.0.1
 
